--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^17.1.0",
     "drizzle-orm": "^0.44.2",
     "drizzle-seed": "^0.3.1",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.536.0",
     "next": "15.4.1",
     "next-themes": "^0.4.6",
